# MyChatProject

./: CMakeLists.txt  client_chat.db  compile_commands.json
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  encrypt.hpp
include/server/db/: db.h
include/server/model/: chathistory.hpp  friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: dbtask.hpp  redis.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  encrypt.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: chathistory.cpp  friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: dbtask.cpp  redis.cpp
testjsonfolder/: testjson  testjson.cpp
testmuduo/: CMakeLists.txt  Makefile  cmake_install.cmake  testmuduoserver.cpp
